[gd_scene load_steps=7 format=3 uid="uid://c4vwm8p3qw1yd"]

[ext_resource type="Script" path="res://scenes/game/wasteland.gd" id="1_wasteland"]
[ext_resource type="Script" path="res://scripts/systems/wave_manager.gd" id="2_wave_manager"]
[ext_resource type="PackedScene" uid="uid://cqy8j7xvx3kh5" path="res://scenes/ui/hud.tscn" id="3_hud"]
[ext_resource type="Script" path="res://scenes/ui/wave_complete_screen.gd" id="3_wave_complete_screen"]
[ext_resource type="Script" path="res://scenes/ui/game_over_screen.gd" id="4_game_over_screen"]
[ext_resource type="PackedScene" uid="uid://ccvk0p2xb8iny" path="res://scenes/ui/virtual_joystick.tscn" id="5_virtual_joystick"]

[node name="Wasteland" type="Node2D"]
script = ExtResource("1_wasteland")

[node name="WorldEnvironment" type="CanvasModulate" parent="."]
color = Color(0.7, 0.7, 0.8, 1)

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.5, 1.5)
position_smoothing_enabled = true
position_smoothing_speed = 5.0

[node name="Player" type="Node2D" parent="."]

[node name="Enemies" type="Node2D" parent="."]

[node name="Projectiles" type="Node2D" parent="."]

[node name="Drops" type="Node2D" parent="." groups=["drops_container"]]

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("3_hud")]

[node name="VirtualJoystick" parent="UI" instance=ExtResource("5_virtual_joystick")]
z_index = 100

[node name="WaveCompleteScreen" type="Panel" parent="UI" groups=["wave_complete_screen"]]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("3_wave_complete_screen")

[node name="Content" type="VBoxContainer" parent="UI/WaveCompleteScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="VictoryLabel" type="Label" parent="UI/WaveCompleteScreen/Content"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "Wave Complete!"
horizontal_alignment = 1

[node name="StatsDisplay" type="VBoxContainer" parent="UI/WaveCompleteScreen/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="NextWaveButton" type="Button" parent="UI/WaveCompleteScreen/Content"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Next Wave"

[node name="GameOverScreen" type="Panel" parent="UI" groups=["game_over_screen"]]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -150.0
offset_right = 200.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_game_over_screen")

[node name="Content" type="VBoxContainer" parent="UI/GameOverScreen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -20.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="UI/GameOverScreen/Content"]
layout_mode = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 32
text = "Game Over"
horizontal_alignment = 1

[node name="StatsDisplay" type="VBoxContainer" parent="UI/GameOverScreen/Content"]
layout_mode = 2
size_flags_vertical = 3

[node name="RetryButton" type="Button" parent="UI/GameOverScreen/Content"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Retry"

[node name="MainMenuButton" type="Button" parent="UI/GameOverScreen/Content"]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "Main Menu"

[node name="GameController" type="Node" parent="."]
script = ExtResource("2_wave_manager")
